cart overflow scrollbar fixed

--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -4,10 +4,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 99;
     display: flex;
     justify-content: flex-end;
+  
+    
 
     .opac-layer {
         background: rgba(0, 0, 0, 0.5);
@@ -15,21 +17,27 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
+
     }
     .cart-content {
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background: white;
         position: relative;
         z-index: 1;
         display: flex;
+        overflow-y: scroll;     
         flex-direction: column;
         transform: translateX(100%);
         animation: slideCartWindow 0.3s ease forwards;
+        &::-webkit-scrollbar{
+            width: 1px;
+        }
         @include md {
             width: 340px;
         }
+        
         .cart-header {
             display: flex;
             align-items: center;
